fix to ad / section spacing

--- a/static/css/partials/_common.scss
+++ b/static/css/partials/_common.scss
@@ -161,7 +161,7 @@ hr.divide10 {
 
 .ad-container {
     text-align: center;
-    margin: 95px auto 129px auto;
+    margin: 15px auto 110px auto;
 
     width: $container-desktop;
 
