--- a/static/css/partials/_page-index.scss
+++ b/static/css/partials/_page-index.scss
@@ -27,7 +27,7 @@ body.special {
 
     section {
         @media screen and (min-width: $sm-break) {
-            margin-bottom:65px;
+            margin-bottom:95px;
         }
         @media screen and (max-width: $sm-break-down) {
             margin-bottom:45px;
